# Graduation_Project

./: .gitignore  LICENSE  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md
.github/: copilot-instructions.md
docs/: architecture.md  assets.md  benchmarks.md  release.md  setup.md  simulation.md
docs/dev-notes/: README.md  中文说明.md  变电站巡检环境使用指南.md  导入blender环境.md
ego-planner-for-ground-robot/: run_dense_simulation.sh  run_dwa_simulation.sh  run_mpc_experiments.sh  run_teb_simulation.sh  变电站巡检环境使用指南.md  导入blender环境.md  材质修改示例.md  标记位置.md
ego-planner-for-ground-robot/src/: .gitignore  中文说明.md
ego-planner-for-ground-robot/src/battery_simulator/: package.xml
ego-planner-for-ground-robot/src/battery_simulator/launch/: battery_monitor.launch
ego-planner-for-ground-robot/src/battery_simulator/scripts/: battery_monitor_node.py
ego-planner-for-ground-robot/src/benchmark/: chapter6_cleanup_stack.sh  chapter6_task_runner.py  chapter6_tasks.yaml  cmd_profile.csv  fixed_goals.csv  planning_stats.csv  planning_stats_bspline.csv  planning_stats_minco.csv  run_chapter6_experiments.sh  test_path_planner_regression.py  test_strict_benchmark_gate.py  trial_results_bspline.csv  trial_results_minco.csv
ego-planner-for-ground-robot/src/benchmark/mpc2/: benchmark.txt
ego-planner-for-ground-robot/src/ego-planner/patchworkpp_ros1/: CMakeLists.txt  package.xml
ego-planner-for-ground-robot/src/ego-planner/patchworkpp_ros1/config/: params_ouster128.yaml
ego-planner-for-ground-robot/src/ego-planner/planner/minco_opt/: CMakeLists.txt  package.xml
ego-planner-for-ground-robot/src/ego-planner/planner/minco_opt/include/minco_opt/: poly_traj_optimizer.h  poly_traj_utils.hpp
ego-planner-for-ground-robot/src/ego-planner/planner/minco_opt/src/: poly_traj_optimizer.cpp
ego-planner-for-ground-robot/src/ego-planner/planner/traj_utils/: CMakeLists.txt
ego-planner-for-ground-robot/src/ego-planner/planner/traj_utils/include/traj_utils/: planning_visualization.h
ego-planner-for-ground-robot/src/ego-planner/planner/traj_utils/src/: planning_visualization.cpp
ego-planner-for-ground-robot/src/inspection_dashboard/: DEMO.md  package.xml
ego-planner-for-ground-robot/src/inspection_dashboard/launch/: dashboard.launch  inspection_full.launch
ego-planner-for-ground-robot/src/inspection_dashboard/scripts/: dashboard_node.py
ego-planner-for-ground-robot/src/inspection_dashboard/static/: app.js  map_editor.css  map_editor.js  style.css
ego-planner-for-ground-robot/src/inspection_dashboard/templates/: index.html  map_editor.html
ego-planner-for-ground-robot/src/inspection_services/: CMakeLists.txt  package.xml
ego-planner-for-ground-robot/src/inspection_services/msg/: PhotoEvent.msg
ego-planner-for-ground-robot/src/inspection_services/scripts/: photo_service_node.py
ego-planner-for-ground-robot/src/inspection_services/srv/: TakePhoto.srv
ego-planner-for-ground-robot/src/navigation_baseline/: CMakeLists.txt  package.xml
ego-planner-for-ground-robot/src/navigation_baseline/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
ego-planner-for-ground-robot/src/navigation_baseline/launch/: move_base_teb.launch  sim_env_only.launch
ego-planner-for-ground-robot/src/navigation_baseline/rviz/: navigation.rviz
ego-planner-for-ground-robot/src/navigation_baseline/scripts/: traj_recorder.py
ego-planner-for-ground-robot/src/nlp_commander/: CMakeLists.txt  package.xml  substation_nlp_commander_node_v2.py
ego-planner-for-ground-robot/src/nlp_commander/docs/: FINAL_FIX_SUMMARY.md  PATH_OPTIMIZATION_SUMMARY.md  README_V2.md  UPGRADE_SUMMARY.md
ego-planner-for-ground-robot/src/nlp_commander/launch/: nlp_commander.launch
scripts/: check_release_tree.sh  download_substation_assets.sh  package_substation_assets.sh  run_dense_simulation.sh  run_dwa_simulation.sh  run_mpc_experiments.sh  run_teb_simulation.sh
src/battery_simulator/: CMakeLists.txt
src/battery_simulator/msg/: BatteryState.msg
src/battery_simulator/scripts/: battery_monitor_node.py
src/benchmark/: analyze_stats.py  analyze_tracking.py  chapter6_tasks.yaml  plot_cmd_profile.py  random_goal_benchmark.py  result.txt  strict_benchmark_gate.py  test_chapter6_runtime_regression.py
src/benchmark/mpc2/: benchmark.txt
src/ego-planner/patchwork/: CMakeLists.txt
src/ego-planner/patchwork/config/: params.yaml
src/ego-planner/planner/plan_manage/: CMakeLists.txt  package.xml
src/ego-planner/planner/plan_manage/include/plan_manage/: ground_safety_utils.h  planner_manager.h
src/ego-planner/planner/plan_manage/launch/: advanced_param.xml  advanced_substation_param.xml  run_in_substation.launch
src/ego-planner/planner/plan_manage/msg/: MINCOTraj.msg
src/ego-planner/planner/plan_manage/src/: ego_replan_fsm.cpp  traj_server.cpp
src/ego-planner/planner/plan_manage/test/: test_fsm_heading_utils.cpp  test_ground_safety_utils.cpp
src/inspection_dashboard/: CMakeLists.txt  DEMO.md  README.md  package.xml
src/inspection_dashboard/launch/: inspection_full.launch
src/inspection_dashboard/scripts/: dashboard_node.py
src/inspection_dashboard/static/basemap/: _config.json
src/inspection_dashboard/templates/: index.html
src/inspection_services/launch/: photo_service.launch
src/navigation_baseline/: package.xml
src/navigation_baseline/config/: dwa_local_planner_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
src/navigation_baseline/launch/: move_base_dwa.launch
src/nlp_commander/: CMakeLists.txt  package.xml
src/nlp_commander/docs/: BUGFIX_SUMMARY.md  README_V2.md  UPGRADE_SUMMARY.md
src/nlp_commander/maps/: simplified_substation.osm  substation.osm
src/nlp_commander/src/: substation_nlp_commander_node.py
src/nlp_commander/tests/: test_llm.py
src/nlp_commander/utils/: __init__.py  graph_utils.py  intent_normalizer.py  llm_utils.py  runtime_policy.py  segment_scheduler.py
src/substation_description/: CMakeLists.txt  README.md  package.xml
src/substation_description/models/substation_dae/: model.config
substation_dae/: model.config  model.sdf
(+88 files in other folders)
