<?xml version="1.0"?>
<package format="2">
  <name>battery_simulator</name>
  <version>0.1.0</version>
  <description>虚拟电量监控节点 - 时间衰减 + 运动消耗 + 拍照消耗 (与样条类型无关)</description>
  <maintainer email="leo@example.com">leo</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>inspection_services</exec_depend>
</package>
