<?xml version="1.0"?>
<package format="2">
  <name>inspection_dashboard</name>
  <version>0.1.0</version>
  <description>变电站巡检 Web 仪表盘 (Flask + SocketIO + ROS 桥, 与 B样条/MINCO 局部规划无关)</description>
  <maintainer email="leo@example.com">leo</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>inspection_services</exec_depend>
  <exec_depend>battery_simulator</exec_depend>
</package>
