<?xml version="1.0"?>
<package format="2">
  <name>inspection_services</name>
  <version>0.1.0</version>
  <description>变电站智能巡检 - 拍照服务节点 (与 B样条/MINCO 局部规划无关，仅消费 /camera/image)</description>
  <maintainer email="leo@example.com">leo</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
