<?xml version="1.0"?>
<package format="2">
  <name>navigation_baseline</name>
  <version>1.0.0</version>
  <description>DWA and TEB baseline configurations for navigation comparison experiments</description>
  <maintainer email="leo@todo.todo">leo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>move_base</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
