<?xml version="1.0"?>
<package format="2">
  <name>patchworkpp_ros1</name>
  <version>0.1.0</version>
  <description>ROS1 wrapper for Patchwork++ ground segmentation.</description>

  <maintainer email="leo@example.com">leo</maintainer>
  <license>BSD-2-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export/>
</package>

