cmake_minimum_required(VERSION 2.8.3)
project(minco_opt)

set(CMAKE_BUILD_TYPE "Release")
ADD_COMPILE_OPTIONS(-std=c++11 )
ADD_COMPILE_OPTIONS(-std=c++14 )
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -g")

find_package(Eigen3 REQUIRED)
find_package(PCL 1.7 REQUIRED)

find_package(catkin REQUIRED COMPONENTS
  roscpp
  rospy
  std_msgs
  visualization_msgs
  plan_env
  cv_bridge
  path_searching
  traj_utils
)

catkin_package(
 INCLUDE_DIRS include
 LIBRARIES minco_opt
 CATKIN_DEPENDS plan_env path_searching traj_utils
#  DEPENDS system_lib
)

include_directories( 
    SYSTEM 
    include 
    ${catkin_INCLUDE_DIRS}
    ${Eigen3_INCLUDE_DIRS} 
    ${PCL_INCLUDE_DIRS}
)

add_library( minco_opt 
    src/poly_traj_optimizer.cpp 
    )
target_link_libraries( minco_opt
    ${catkin_LIBRARIES} 
    )  
